# m3meka

./: CMakeLists.txt  Makefile.am  configure.ac  package.xml
branches/iq/: configure.ac
branches/iq/meka-ros/meka_common/meka_description/robots/: meka.urdf.xacro
branches/iq/meka-ros/meka_examples/: joint_position_cmd.py
branches/iq/meka-ros/meka_examples/src/: joint_traj_cmd.cpp
branches/iq/meka-ros/meka_robot/: stack.xml
branches/iq/meka-ros/meka_robot/meka_bringup/: manifest.xml
branches/iq/meka-ros/meka_robot/meka_bringup/launch/: meka.launch  meka_no_gazebo.launch
branches/iq/meka-ros/meka_simulation/: stack.xml
branches/iq/meka-ros/meka_simulation/meka_controller_configuration_gazebo/config/: meka_arm_controllers.yaml  meka_joint_position_controllers.yaml
branches/iq/meka-ros/meka_simulation/meka_controller_configuration_gazebo/launch/: meka_default_controllers.launch  meka_position_controllers.launch
branches/iq/meka-ros/meka_simulation/meka_gazebo/: manifest.xml
branches/iq/meka-ros/meka_simulation/meka_gazebo/Media_reem/materials/scripts/: meka.material
branches/iq/meka-ros/meka_simulation/meka_gazebo/launch/: empty_nograv.world  empty_world.launch  meka.launch  meka_bringup.launch  meka_empty_world.launch  meka_no_controllers.launch  meka_position.launch  meka_position_world.launch  meka_traj.launch  meka_traj_world.launch
branches/iq/meka-ros/meka_simulation/meka_ogre_reem/: manifest.xml
branches/iq/meka-ros/meka_simulation/meka_ogre_reem/Media/models/arm/: arm_left_1_low.mesh  arm_left_2_low.mesh  arm_left_3_low.mesh  arm_left_4_low.mesh  arm_left_5_collision.mesh  arm_left_5_low.mesh  arm_right_1_low.mesh  arm_right_2_low.mesh  arm_right_3_low.mesh  arm_right_4_low.mesh  arm_right_5_collision.mesh  arm_right_5_low.mesh
branches/iq/meka-ros/meka_simulation/meka_ogre_reem/Media/models/arm/convex/: arm_left_1_low_convex.mesh  arm_left_2_low_convex.mesh  arm_left_3_low_convex.mesh  arm_left_4_low_convex.mesh  arm_left_5_collision_convex.mesh  arm_left_5_low_convex.mesh  arm_right_1_low_convex.mesh  arm_right_2_low_convex.mesh  arm_right_3_low_convex.mesh  arm_right_4_low_convex.mesh  arm_right_5_collision_convex.mesh  arm_right_5_low_convex.mesh
branches/iq/meka-ros/meka_simulation/meka_ogre_reem/Media/models/base/: base_low.mesh
branches/iq/meka-ros/meka_simulation/meka_ogre_reem/Media/models/base/convex/: base_low_convex.mesh
branches/iq/meka-ros/meka_simulation/meka_ogre_reem/Media/models/hand/: hand_left_low.mesh  hand_right_low.mesh
branches/iq/meka-ros/meka_simulation/meka_ogre_reem/Media/models/hand/convex/: hand_left_low_convex.mesh  hand_right_low_convex.mesh
branches/iq/meka-ros/meka_simulation/meka_ogre_reem/Media/models/head/: head_1_low.mesh  head_2_collision.mesh  head_2_low.mesh
branches/iq/meka-ros/meka_simulation/meka_ogre_reem/Media/models/head/convex/: head_1_low_convex.mesh  head_2_collision_convex.mesh  head_2_low_convex.mesh
branches/iq/meka-ros/meka_simulation/meka_ogre_reem/Media/models/torso/: torso_1_low.mesh  torso_2_collision.mesh  torso_2_low.mesh
branches/iq/meka-ros/meka_simulation/meka_ogre_reem/Media/models/torso/convex/: torso_1_low_convex.mesh  torso_2_collision_convex.mesh  torso_2_low_convex.mesh
branches/iq/python/m3/: sixaxis.py
branches/iq/python/scripts/dev/: m3dev_humanoid_tuning.py
branches/iq/robot_config/: m3_config.yml
branches/iq/robot_config/ma10/: m3actuator_ec_ma10_j0.yml  m3actuator_ec_ma10_j1.yml  m3actuator_ec_ma10_j2.yml  m3actuator_ec_ma10_j3.yml  m3actuator_ec_ma10_j5.yml  m3actuator_ec_ma10_j6.yml  m3actuator_ma10_j0.yml  m3actuator_ma10_j1.yml  m3actuator_ma10_j2.yml  m3actuator_ma10_j3.yml  m3actuator_ma10_j4.yml  m3actuator_ma10_j5.yml  m3actuator_ma10_j6.yml  m3joint_ma10_j0.yml  m3joint_ma10_j1.yml  m3joint_ma10_j2.yml  m3joint_ma10_j3.yml  m3joint_ma10_j4.yml  m3joint_ma10_j5.yml  m3joint_ma10_j6.yml  m3loadx6_ec_ma10_l0.yml  m3loadx6_ma10_l0.yml
branches/iq/robot_config/mr8/: m3humanoid_right_arm_torso_head_mr8.yml.no_shm  m3humanoid_right_arm_torso_head_mr8.yml.use_shm  m3humanoid_right_arm_torso_mr8.yml  m3humanoid_shm8.yml
branches/iq/robot_config/pwr/: m3pwr_ec_pwr020.yml  m3pwr_pwr020.yml  m3uta_imu_ec_pwr020.yml  m3uta_imu_pwr020.yml
branches/iq/robot_config/ros/: ros.yml
branches/iq/ros/m3meka_msgs/msg_gen/cpp/include/m3meka_msgs/: M3OmnibaseJoy.h
branches/iq/src/apps/m3humanoid_shm_test/: m3humanoid_shm_test  m3humanoid_shm_test.cpp
branches/iq/src/m3/chains/: dynamatics.cpp
branches/iq/src/m3/hardware/: Makefile.am  actuator_virtual.cpp  actuator_virtual.h  joint.cpp  joint_zlift.cpp
branches/iq/src/m3/hardware_iq/: Makefile.am  actuator_ec_iq.h  actuator_ec_iq.proto  actuator_iq.proto  factory_proxy.cpp  humanoid_ros_iq.cpp  humanoid_ros_iq.h  humanoid_ros_iq.proto  humanoid_shm.cpp  humanoid_shm.h  humanoid_shm.proto  humanoid_shm_sds.h  joint_array_iq.proto  joint_traj.h  joint_traj.proto
branches/iq/src/m3/robots/: humanoid.h
branches/iq/src/m3dsp/boards/HEX4_2.0/src/: adc.c
branches/iq/src/m3dsp/max2_bldc_a2r4/: encoder_vertx.h
python/: Makefile.am
robot_config/: m3_config.yml
ros/meka_trajectory/: CMakeLists.txt  package.xml
scripts/: CMakeLists.txt
trunk/src/m3/chains/: Makefile.am  joint_array.cpp  joint_array_mode.proto
trunk/src/m3/hardware/: Makefile  Makefile.am  Makefile.in  actuator.cpp  actuator.h  actuator.pb.cpp  actuator.pb.h  actuator.proto  actuator_ec.cpp  actuator_ec.h  actuator_ec.pb.cpp  actuator_ec.pb.h  actuator_ec.proto  actuator_virtual.cpp  actuator_virtual.h  async_io.pb.cpp  async_io.pb.h  ctrl_simple.cpp  ctrl_simple.h  ethercat.cpp  ethercat.h  ethercat.proto  factory_proxy.cpp  joint.cpp  joint.h  joint.pb.cpp  joint.pb.h  joint.proto  joint_mode_ros.pb.h  joint_mode_ros.proto  joint_zlift_shm.cpp  joint_zlift_shm_sds.h  led_matrix_ec.pb.cpp  led_matrix_ec.pb.h  ledx2_ec.pb.cpp  ledx2_ec.pb.h  ledx2xn_ec.pb.cpp  ledx2xn_ec.pb.h  ledx2xn_ec_shm.cpp  loadx1.pb.cpp  (+22 more)
trunk/src/m3/vehicles/: Makefile.am  omnibase.cpp  omnibase.h  omnibase_shm.cpp  omnibase_shm.h  omnibase_shm_sds.h
(+791 files in other folders)
