<package>
  <name>m3meka</name>
  <version>1.9.9</version>
  <description>This repository hosts all the Meka dependant components base on [m3core]</description>
  <maintainer email="hoarau.robotics@gmail.com">Antoine Hoarau</maintainer>
  <author email="edsinger@mekabot.com">Aaron Edsinger</author>
  <license>GPLv3</license>

  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>m3core</build_depend>
  <build_depend>holomnni_pcv</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>libprotobuf-dev</build_depend>
  <build_depend>libncurses5-dev</build_depend>
  <run_depend>m3core</run_depend>
  <run_depend>holomnni_pcv</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>libprotobuf-dev</run_depend>
  <run_depend>libncurses5-dev</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
