

set(${PROJECT_NAME}_SCRIPTS
m3rec
m3rt_printer_run
)

if(NOT ${CMAKE_INSTALL_PREFIX} MATCHES "/usr/(.*)")
install (
	FILES ${${PROJECT_NAME}_SCRIPTS}
	PERMISSIONS OWNER_WRITE OWNER_EXECUTE OWNER_READ GROUP_READ WORLD_READ
	DESTINATION bin
)
else()
install (
	${${PROJECT_NAME}_SCRIPTS}
	PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ WORLD_EXECUTE
	DESTINATION bin
)
endif()
